compiler/actonc/test/syntaxerrors/err28.act
# Missing expression between commas
def bad_args():
    print(1,,2)